<resources>
    <string name="app_name">Fitstyle</string>
    <string name="file_provider_authority" translatable="false">ai.folded.fitstyle.fileprovider</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="try_again">Try Again</string>
    <string name="start_over">Start Over</string>
    <string name="get_started">Get Started!</string>
    <string name="oh_no">Oh no!</string>
    <string name="not_now">Not Now</string>
    <string name="all_set">All Set!</string>
    <string name="view_image">View Image</string>
    <string name="ok">OK</string>
    <string name="saved">Saved!</string>
    <string name="saving">Saving…</string>
    <string name="email_subject">Fitstyle App Feedback</string>
    <string name="continue_title">Continue</string>
    <string name="start">Start</string>
    <string name="complete">Complete</string>

    <string name="create_another">Create Another</string>
    <string name="remove_watermark">Remove Watermark</string>
    <string name="removing_watermark">Removing watermark…</string>
    <string name="watermark_removal_purchase_details">Would you like to remove the watermarking on this image for just $1?</string>
    <string name="remove_watermark_confirmation">Purchase Removal</string>
    <string name="status_preparing_purchase">Preparing purchase…</string>
    <string name="status_removing_watermark">Payment successful, removing watermark…</string>

    <string name="payment_failed">Payment Failed</string>
    <string name="payment_cancelled">Payment Cancelled</string>
    <string name="remove_watermark_payment_success">Your purchase was successful and the watermark has been removed.</string>
    <string name="remove_watermark_payment_failure">We were unable to process your payment. Try again. </string>
    <string name="remove_watermark_payment_cancelled">Your payment was cancelled. Try again.</string>
    <string name="remove_watermark_failed">Something went wrong and we were unable to remove the watermark. Please contact support. </string>

    <string name="upload_photo_title">Upload a photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_photo_details">Choose a photo from your library that you\'d like to style.</string>
    <string name="permission_denied_title">Permission Denied</string>
    <string name="gallery_permission_rationale">Access to your storage is necessary so you can choose a photo for styling</string>
    <string name="gallery_permission_settings_access">You previously declined this permission and must grant access via the app settings on your device.</string>

    <string name="select_style_title">Select a style</string>
    <string name="upload_own_style">Upload your own style</string>

    <string name="apply_style_title">Styling</string>
    <string name="style_almost_done">Almost done!</string>Z
    <string name="style_transfer_details">Applying the style to your photo.\nThis will only take a couple of seconds.</string>
    <string name="styled_image_title">Styled Image</string>

    <string name="generic_error_title">Oh no!</string>
    <string name="style_transfer_error">Sorry, we were unable to process your request at this time.</string>
    <string name="style_transfer_cancel_title">Are you sure?</string>
    <string name="style_transfer_cancel_details">Navigating back will cancel the current request.</string>
    <string name="style_transfer_continue">No, continue</string>
    <string name="style_transfer_confirm_cancel">Yes, cancel</string>

    <string name="styled_images_title">My Images</string>
    <string name="empty_images_title">Nothing yet!</string>
    <string name="empty_images_message">Your styled images will appear here once created.</string>
    <string name="style_image">Style An Image</string>

    <string name="pay_with_google_content_description">Pay with Google</string>
    <string name="pay_with_google">Pay with Google</string>

    <string name="saved_successfully">Image saved!</string>
    <string name="saved_failed">Failed to save image, please try again</string>

    <!-- Settings -->
    <string name="user_id">User Id</string>
    <string name="version">Version</string>
    <string name="feedback_section">Feedback</string>
    <string name="feedback">Send Us Feedback</string>
    <string name="feedback_details">Report technical issues or suggest new features</string>

    <string name="info_section">More Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_link" translatable="false">https://foldedai.com/#privacy</string>
    <string name="credits">Credits</string>
    <string name="credits_link" translatable="false">https://foldedai.com/#credits</string>


    <!-- Tutorial -->
    <string name="page_one_title">Welcome! &#128075;</string>
    <string name="page_two_title">How does it work? &#129300;</string>
    <string name="page_three_title">Select a style &#127912;</string>
    <string name="page_four_title">Choose a photo &#128248;</string>
    <string name="page_five_title">Voilà! &#127881;</string>

    <string name="page_one_details">Thank you for downloading the Fitstyle app!\nHere is a quick tutorial on how the app works and how to use it.</string>
    <string name="page_two_details">Fitstyle is a filter that takes two images, a photo (ideally a full body portrait) and a style image (like a painting), and combines the two to create a unique image. Our filter applies the style\’s look to the background of the photo, keeping the person unfiltered.\n\nThis is done in two simple steps… &#128073;</string>
    <string name="page_three_details">Pick from a list of different artworks or upload your own image.</string>
    <string name="page_four_details">From your gallery, choose a photo that you\'d like to style.</string>
    <string name="page_five_details">That\'s all there is to it!\nThe resulting image will be automatically saved in the app and accessible via the \'My Images\' option on the home screen.</string>

</resources>