<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:key="userId"
        app:title="@string/user_id"/>

    <Preference
        app:key="version"
        app:title="@string/version"/>

    <PreferenceCategory
        android:title="@string/feedback_section">

        <Preference
            app:key="feedback"
            app:title="@string/feedback"
            app:summary="@string/feedback_details"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/info_section">

        <Preference
            android:title="@string/privacy_policy">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/privacy_policy_link" />
        </Preference>

        <Preference
            android:title="@string/credits">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/credits_link" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>