<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="retryClickListener"
            type="android.view.View.OnClickListener"/>

        <variable
            name="restartClickListener"
            type="android.view.View.OnClickListener"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:lottie_rawRes="@raw/error_cone_anim"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/generic_error_title"
            android:textSize="@dimen/header_size"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintWidth_percent="@dimen/button_width_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anim_view"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:textSize="@dimen/message_size"
            android:fontFamily="sans-serif"
            android:text="@string/style_transfer_error"
            app:layout_constraintWidth_percent="@dimen/button_width_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:onClick="@{retryClickListener}"
            android:id="@+id/retry_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/try_again"
            app:icon="@drawable/ic_arrow_back"
            app:layout_constraintWidth_percent="@dimen/button_width_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:onClick="@{restartClickListener}"
            android:id="@+id/restart_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/start_over"
            app:icon="@drawable/ic_retry"
            app:layout_constraintWidth_percent="@dimen/button_width_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/retry_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
