<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/empty_box_anim"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/empty_images_title"
        android:textSize="@dimen/header_size"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintWidth_percent="@dimen/button_width_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anim_view"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:textSize="@dimen/message_size"
        android:fontFamily="sans-serif"
        android:text="@string/empty_images_message"
        app:layout_constraintWidth_percent="@dimen/button_width_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:onClick="@{styleImageClickListener}"
        android:id="@+id/retry_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/style_image"
        app:layout_constraintWidth_percent="@dimen/button_width_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"/>

</androidx.constraintlayout.widget.ConstraintLayout>