<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="startClickListener"
            type="android.view.View.OnClickListener"/>

        <variable
            name="historyClickListener"
            type="android.view.View.OnClickListener"/>

        <variable
            name="settingsClickListener"
            type="android.view.View.OnClickListener"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:onClick="@{startClickListener}"
                android:id="@+id/start_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/get_started"
                app:icon="@drawable/ic_arrow_forward"
                app:layout_constraintWidth_percent="@dimen/button_width_percent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:onClick="@{historyClickListener}"
                android:id="@+id/history_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/styled_images_title"
                app:icon="@drawable/ic_images"
                app:layout_constraintWidth_percent="@dimen/button_width_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start_button"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:onClick="@{settingsClickListener}"
                android:id="@+id/settings_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/settings"
                app:icon="@drawable/ic_settings"
                app:layout_constraintWidth_percent="@dimen/button_width_percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
