<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ai.folded.fitstyle.viewmodels.PaymentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/preview_card_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_large"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintWidth_percent="0.45"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/preview_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:blurredStyledImage="@{viewModel.styledImage}"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/purchase_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/watermark_removal_purchase_details"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            app:layout_constraintTop_toBottomOf="@+id/preview_card_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:id="@+id/confirm_payment_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/remove_watermark_confirmation"
            app:icon="@drawable/ic_currency"
            app:layout_constraintTop_toBottomOf="@+id/purchase_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:indeterminate="true"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@+id/confirm_payment_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/status_preparing_purchase"
            android:textSize="16sp"
            android:fontFamily="sans-serif-condensed-light"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

        <androidx.constraintlayout.widget.Group
            android:visibility="invisible"
            android:id="@+id/progress_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:constraint_referenced_ids="progress_bar, progress_details"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>